# averagedatabase

./: .gitignore  README.md  bird_vector.json  burger_vector.json  cake_vector.json  cat_vector.json  dog_vector.json  package-lock.json  package.json  pizza_vector.json  query2_vector.json  query3_vector.json  query4_vector.json  query_vector.json  store_vectors.sh
avgdb/: README.md  index.js  package-lock.json  package.json
k8s/: Chart.yaml  README.md
k8s/templates/: deployment.yaml  ingress.yaml  service.yaml
k8s/values/: api.yaml  ingress.yaml  production.yaml  shared.yaml  values.yaml  web.yaml
k8s/values/deployments/: api.yaml  shared.yaml  web.yaml
k8s/values/services/: api.yaml  shared.yaml  web.yaml
services/api/: Cargo.toml  Dockerfile  README.md
services/api/src/: main.rs
services/database/: README.md
services/web/: Dockerfile  README.md  package-lock.json  package.json  server.mjs  server.ts  tsconfig.json
services/web/app/: app.css  root.tsx  routes.ts
services/web/app/components/: Pricing.tsx  benchmarks.tsx  features.tsx  footer.tsx  hero.tsx  logos.tsx  paywall_overlay.tsx  pricing.tsx  testimonials.tsx
services/web/app/data/: testimonials.ts
services/web/app/routes/: _index.tsx  docs._index.tsx  docs.tsx  home.tsx  layout.tsx  uptime._index.tsx  uptime.tsx  we-rich-lmao._index.tsx  we-rich-lmao.tsx
services/web/components/: AnnouncementBanner.tsx  ApiKeyNotification.tsx  Blog.tsx  BlogListing.tsx  Footer.tsx  HeaderSimple.tsx  HeroBullets.module.css  HeroBullets.tsx  Pricing.tsx  Testimonials.tsx
(+21 files in other folders)
