[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
http-body-util = "0.1.2"
lru = "0.12.3"
rand = "0.8.5"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tracing-subscriber = "0.3.18"
