[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
chrono = "0.4.38"
http-body-util = "0.1.2"
image = "0.24.7"
base64 = "0.21.7"
lopdf = "0.31.0"
lru = "0.12.3"
md5 = "0.7.0"
rand = "0.8.5"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.120"
tokio = { version = "1.38.2", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.4"
tracing-subscriber = "0.3.18"
